[gd_scene load_steps=31 format=2]

[ext_resource path="res://cage.png" type="Texture" id=1]
[ext_resource path="res://cat_sprites/creme_001_eating5.png" type="Texture" id=2]
[ext_resource path="res://cat_sprites/creme_001.png" type="Texture" id=3]
[ext_resource path="res://cat_sprites/creme_001_eating4.png" type="Texture" id=4]
[ext_resource path="res://cat_sprites/creme_001_eating3.png" type="Texture" id=5]
[ext_resource path="res://assets/WEAPONIZE.png" type="Texture" id=6]
[ext_resource path="res://creme_HungerBar.gd" type="Script" id=7]
[ext_resource path="res://assets/FEED.png" type="Texture" id=8]
[ext_resource path="res://cat_sprites/creme_001_eating1.png" type="Texture" id=9]
[ext_resource path="res://cat_sprites/creme_001_eating2.png" type="Texture" id=10]
[ext_resource path="res://caged_creme_cat.gd" type="Script" id=11]
[ext_resource path="res://creme_cat_popup.gd" type="Script" id=12]
[ext_resource path="res://caged_creme_cat_Area2D.gd" type="Script" id=13]
[ext_resource path="res://assets/weapons/Catlass.png" type="Texture" id=14]
[ext_resource path="res://assets/weapons/CATLASS UNLOCKED.png" type="Texture" id=15]
[ext_resource path="res://assets/HungerbarBackgroung 2.png" type="Texture" id=16]
[ext_resource path="res://assets/HungerbarForground.png" type="Texture" id=17]

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 32, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 64, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 96, 96, 32, 32 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": false,
"name": "death",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 11 ), SubResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 3.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 10 ), ExtResource( 9 ) ],
"loop": true,
"name": "eating",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 31.512, 20.3786 )

[sub_resource type="Animation" id=19]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer/Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 14 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimationPlayer/Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimationPlayer/Sprite2:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 15 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AnimationPlayer/Sprite2:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "Weapon Unlocked"
length = 3.0
step = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 2.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer/Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.48, 2.42 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 14 ), ExtResource( 14 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimationPlayer/Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.05, 0.48, 2.42, 2.99 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimationPlayer/Sprite2:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.52, 2.41 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 15 ), ExtResource( 15 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AnimationPlayer/Sprite2:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.47, 2.38, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="caged_creme_cat" type="Node2D"]
position = Vector2( -0.999969, -5.99994 )
scale = Vector2( 0.458848, 0.458848 )
script = ExtResource( 11 )

[node name="creme_cat_chilling" type="AnimatedSprite" parent="."]
scale = Vector2( 2.17971, 2.17971 )
frames = SubResource( 7 )
animation = "death"
frame = 4
playing = true

[node name="Cage" type="Sprite" parent="."]
position = Vector2( 6.04059, -21.1421 )
scale = Vector2( 0.653801, 0.614012 )
texture = ExtResource( 1 )

[node name="Popup" type="Popup" parent="."]
visible = true
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 193.964
margin_top = -4.35887
margin_right = 393.964
margin_bottom = 124.641
rect_scale = Vector2( 0.864917, 0.864917 )
script = ExtResource( 12 )

[node name="Button" type="Button" parent="Popup"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -58.3884
margin_top = -55.7637
margin_right = 53.6116
margin_bottom = 0.236343
rect_scale = Vector2( 0.988412, 1.00332 )
icon = ExtResource( 6 )
flat = true

[node name="Button2" type="Button" parent="Popup"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -54.2332
margin_top = 21.7937
margin_right = 57.7668
margin_bottom = 77.7937
rect_scale = Vector2( 0.924214, 0.924214 )
icon = ExtResource( 8 )
flat = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 23.973, 54.4841 )
scale = Vector2( 2.04022, 2.62013 )
script = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -8.01153, -29.5282 )
shape = SubResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 19 )
"anims/Weapon Unlocked" = SubResource( 18 )

[node name="ColorRect" type="ColorRect" parent="AnimationPlayer"]
margin_left = -179.0
margin_top = -168.0
margin_right = 1265.0
margin_bottom = 743.0
color = Color( 0, 0, 0, 0 )

[node name="Sprite" type="Sprite" parent="AnimationPlayer"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 471, 299 )
scale = Vector2( 0.466074, 0.466074 )
texture = ExtResource( 14 )

[node name="Sprite2" type="Sprite" parent="AnimationPlayer"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 519, 509 )
texture = ExtResource( 15 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="HungerBar" type="TextureProgress" parent="Control"]
margin_left = -67.5605
margin_top = -122.045
margin_right = 232.439
margin_bottom = -62.0449
rect_scale = Vector2( 0.514676, 0.514676 )
texture_under = ExtResource( 16 )
texture_progress = ExtResource( 17 )
script = ExtResource( 7 )

[node name="Timer" type="Timer" parent="Control/HungerBar"]

[connection signal="pressed" from="Popup/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Popup/Button" to="Popup" method="_on_Button_pressed"]
[connection signal="pressed" from="Popup/Button" to="Area2D" method="_on_Button_pressed"]
[connection signal="pressed" from="Popup/Button" to="Control/HungerBar" method="_on_Button_pressed"]
[connection signal="pressed" from="Popup/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Popup/Button2" to="Popup" method="_on_Button2_pressed"]
[connection signal="pressed" from="Popup/Button2" to="Control/HungerBar" method="_on_Button2_pressed"]
[connection signal="body_entered" from="Area2D" to="Popup" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="Popup" method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Control/HungerBar/Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Control/HungerBar/Timer" to="Popup" method="_on_Timer_timeout"]
[connection signal="timeout" from="Control/HungerBar/Timer" to="Area2D" method="_on_Timer_timeout"]
[connection signal="timeout" from="Control/HungerBar/Timer" to="Control/HungerBar" method="_on_Timer_timeout"]
